# philter-web-app

./: .env.example  .gitignore  DESIGN_UPDATES.md  Dockerfile  LICENSE  README.md  THIRD-PARTY-LICENSE  docker-compose.yml  download-nltk.py  main.py  philter.py  pyproject.toml  run.sh  start.bat
static/: style.css
templates/: index.html  results.html
