[project]
name = "philter-web-app"
version = "0.1.0"
description = "Web interface for Philter PHI filtering tool"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "chardet>=3.0.4",
    "nltk>=3.6.6",
    "numpy>=1.22.0",
    "pandas>=1.0.5",
    "xmltodict>=0.12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = []
